# avito_screening

./: .gitignore  CMakeLists.txt  code_branch_selector.h  readme.md
app/: CMakeLists.txt  buffer.hpp  const_values.h  counter.hpp  counter_shishkov.hpp  files.cpp  files.h  main.cpp  utils.hpp  word_stat.hpp
app/data_structures/: hash_table.hpp  sharded_trie.hpp  trie.hpp  trie_mem.hpp  trie_vec.hpp
app/memory/: memresource.hpp  tracknew.hpp
app/multi_threading/: async_wrapper.hpp  packaged_task_wrapper.hpp  strand.hpp  ts_map.hpp  ts_queue.hpp
test_data/inputs/: input1  input2
test_data/outputs/: output_check2.txt
tests/: CMakeLists.txt  tests_all.cpp  tests_end_to_end.cpp
